RESOLVED FIXED157492
CallObjectConstructor should not call operationToThis in the FTL
https://bugs.webkit.org/show_bug.cgi?id=157492
Summary CallObjectConstructor should not call operationToThis in the FTL
Keith Miller
Reported 2016-05-09 15:31:10 PDT
CallObjectConstructor should not call operationToThis in the FTL
Attachments
Patch (2.64 KB, patch)
2016-05-09 15:34 PDT, Keith Miller
no flags
Patch for landing (3.02 KB, patch)
2016-05-09 16:20 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2016-05-09 15:34:43 PDT
Keith Miller
Comment 2 2016-05-09 15:37:18 PDT
Simon Fraser (smfr)
Comment 3 2016-05-09 15:50:45 PDT
Comment on attachment 278444 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=278444&action=review > Source/JavaScriptCore/ChangeLog:4 > + CallObjectConstructor should not call operationToThis in the FTL > + https://bugs.webkit.org/show_bug.cgi?id=157492 You should have a radar number here, and mention the web site that broke.
Mark Lam
Comment 4 2016-05-09 15:57:05 PDT
Comment on attachment 278444 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=278444&action=review r=me > Source/JavaScriptCore/ChangeLog:8 > + At some point when I was working on intrinsicifying the Object typo: /intrinsicifying/intrinsifying/. I'm not sure "intrinsifying" is an actual word, but I think it's better than "intrinsicifying". > Source/JavaScriptCore/ChangeLog:9 > + constructor I realized that the Object constructor was different Add a comma after constructor?
Mark Lam
Comment 5 2016-05-09 16:00:34 PDT
Keith, can you also address Simon's feedback?
Keith Miller
Comment 6 2016-05-09 16:04:59 PDT
Comment on attachment 278444 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=278444&action=review >> Source/JavaScriptCore/ChangeLog:4 >> + https://bugs.webkit.org/show_bug.cgi?id=157492 > > You should have a radar number here, and mention the web site that broke. Ah, I didn't know that was a thing. Fixed. >> Source/JavaScriptCore/ChangeLog:8 >> + At some point when I was working on intrinsicifying the Object > > typo: /intrinsicifying/intrinsifying/. I'm not sure "intrinsifying" is an actual word, but I think it's better than "intrinsicifying". changed. >> Source/JavaScriptCore/ChangeLog:9 >> + constructor I realized that the Object constructor was different > > Add a comma after constructor? fixed.
Keith Miller
Comment 7 2016-05-09 16:20:31 PDT
Created attachment 278453 [details] Patch for landing
WebKit Commit Bot
Comment 8 2016-05-09 16:50:33 PDT
Comment on attachment 278453 [details] Patch for landing Clearing flags on attachment: 278453 Committed r200597: <http://trac.webkit.org/changeset/200597>
WebKit Commit Bot
Comment 9 2016-05-09 16:50:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.