CallObjectConstructor should not call operationToThis in the FTL https://bugs.webkit.org/show_bug.cgi?id=157492 <rdar://problem/26149904>

Reviewed by Mark Lam.

At some point when I was working on intrinsifying the Object
constructor, I realized that the Object constructor was different
from the ToObject operation. I fixed the DFG but I guess I didn't
fix the FTL.

This patch fixes an issue with www.wunderground.com not loading
the 10-day forecast and local map.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCallObjectConstructor):
* tests/stress/call-object-constructor.js: Added.
(test):
(assert):


Canonical link: https://commits.webkit.org/175628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200597 268f45cc-cd09-0410-ab3c-d52691b4dbfc